# discord_org_hub

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  SETUP.md
backend/: Cargo.toml
backend/migrations/: 001_create_users_table.sql  002_create_discord_orgs_table.sql  003_create_members_table.sql  004_create_discord_tokens_table.sql
backend/src/: config.rs  main.rs
backend/src/database/: mod.rs  queries.rs
backend/src/handlers/: discord_tokens.rs  mod.rs  users.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/styling/: main.css
frontend/src/: config.rs  main.rs
frontend/src/components/: download_button.rs  leaderboard.rs  mod.rs
frontend/src/services/: api.rs  discord.rs  mod.rs
frontend/src/views/: discord_callback.rs  home.rs  leaderboard.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/database/: mod.rs  models.rs
shared/src/models/: discord.rs  member.rs  mod.rs  user.rs
