[package]
name = "frontend"
version = "0.1.0"
authors = ["DrProfSgtMrJ <bacon388@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "Headers",
    "History",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "Response",
    "Storage",
    "Url",
    "UrlSearchParams",
    "Window",
] }
gloo-utils = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
